# gnu-guitar-gui

./: .clangformat  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.hpp  Makefile  README.md  appveyor.yml  gnuitar.pro
cmake/: FindRtAudio.cmake  WinDeployQt.cmake
docs/: index.html  readme.html
icons/: CMakeLists.txt
include/gnu-guitar-qt/: api-options.hpp  api-preferences-list.hpp  api-preferences.hpp  audio-panel.h  button.h  control-list.hpp  controller.h  controller.hpp  core-driver.hpp  doc-browser.h  driver-preferences.hpp  driver.hpp  effect-view.h  effect-view.hpp  fake-driver.hpp  gnuitar-qt.pro  knob.h  ladspa-setup.hpp  main-window.h  main-window.hpp  menu-bar.h  power-button.hpp  preferences.hpp  rack.h
include/gnu-guitar/gui/: api-settings.hpp  binary-control.hpp  control-list.hpp  control-visitor.hpp  control.hpp  core-driver.hpp  driver.hpp  fake-driver.hpp  string-control.hpp
include/gnu-guitar/qt/: api-form.hpp  combo-box.hpp  controller.hpp  doc-browser.hpp  error-dialog.hpp  form-item.hpp  form-visitor.hpp  form.hpp  labelled-switch.hpp
include/gnuitar/: plugin-manager.h  plugin.h
scripts/: autotools-build.sh  echo.bash  format.bash  iterate-headers.bash  iterate-sources.bash  travis-build.sh
src/: .nvimrc  CMakeLists.txt  Doxyfile  Makefile  alsa-driver.h  amp.c  api-form.cpp  api-options.cpp  api-preferences-list.cpp  api-preferences.cpp  api-settings.cpp  audio-alsa.c  audio-alsa.h  audio-driver.c  audio-driver.h  audio-dsound.c  audio-jack.c  audio-oss.c  audio-panel-test.cc  audio-panel.cc  audio-winmm.c  autowah.c  backbuf.h  binary-control.cpp  biquad.c  biquad.h  button.cc  chain.c  chain.h  chorus.c  combo-box.cpp  control-list.cpp  control-visitor.cpp  control.cpp  controller.cc  controller.cpp  conversion.c  conversion.h  core-driver.cpp  delay.c  (+100 more)
src/gnuitar-ampc/: CMakeLists.txt  amp-test.cc  amp.h  capacitor.cc  capacitor.h  circuit.cc  circuit.h  component.cc  component.h  exception.cc  exception.h  gnuitar-ampc.cc  gnuitar-ampc.pro  lexer.cc  lexer.h  resistor.cc  resistor.h  source-writer.cc  source-writer.h  spice-lexer-test.cc  spice-lexer.cc  spice-lexer.h  spice-parser-test.cc  spice-parser.cc  spice-parser.h  spice-token.cc  spice-token.h  visitor.cc  visitor.h  voltage.cc  voltage.h
src/gnuitar-builtins/: CMakeLists.txt  Makefile  audio-jack.c  audio-winmm.c  autowah.c  biquad.c  biquad.h  delay.c  distort2.c  driver-alsa.c  driver-alsa.h  echo-test.c  echo.c  echo.h  eqbank.c  noise.c  package-test.c  package.c  package.cc  package.def  reverb.h  rotary.c  tremolo.c  tremolo.h  tuner.c  tuner.h  vibrato.c  vibrato.h
src/gnuitar-qt/: CMakeLists.txt  audio-panel.cc  audio-panel.h  button.cc  button.h  controller.cc  controller.h  doc-browser-test.cc  doc-browser-test.cpp  doc-browser.cc  doc-browser.cpp  doc-browser.h  effect-view.cc  effect-view.h  gnuitar-qt.cc  gnuitar-qt.pro  knob.cc  knob.h  main-window.cc  main-window.cpp  main-window.h  main-window.ui  main.cpp  menu-bar-test.cc  menu-bar.cc  menu-bar.h  rack.cc  rack.h  resources.qrc
src/gnuitar-sh/: CMakeLists.txt  Makefile  gnuitar-sh.c  gnuitar-sh.cc  gnuitar-sh.pro  shell.c  shell.cc  shell.h  string.c  string.h
src/libgnuitar/: CMakeLists.txt  Doxyfile  alsa-driver.cc  alsa-driver.h  control-set.cc  control-set.h  control.cc  control.h  driver-manager-test.cc  driver-manager.cc  driver-manager.h  driver-test.cc  driver.cc  driver.h  effect-list.cc  effect-list.h  effect.cc  effect.h  exception.cc  exception.h  ladspa.h  libgnuitar.pro  plugin-manager.cc  plugin-manager.h  plugin-test.cc  plugin.cc  plugin.h  shared-library-collection.cc  shared-library-collection.h  shared-library.cc  shared-library.h
src/plugins/: CMakeLists.txt  plugins.pro
src/plugins/caps-0.9.24/: AutoFilter.cc  CMakeLists.txt  Descriptor.h  caps-0.9.24.pro  interface.cc  tags
src/qt/: combo-box.cpp  controller.cpp  doc-browser.cpp  form-item.cpp  form.cpp
travis-ci/: build.bash  deploy_rsa.enc
