CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0)

PROJECT(Gnuitar)

SET (GNUITAR_VERSION_MAJOR 0)
SET (GNUITAR_VERSION_MINOR 4)
SET (GNUITAR_VERSION_PATCH 0)

ADD_SUBDIRECTORY(src)

SET (CPACK_PACKAGE_DESCRIPTION_SUMMARY "A cross-platform, real-time guitar effects processor")
SET (CPACK_PACKAGE_VENDOR "Taylor Holberton")
SET (CPACK_PACKAGE_VERSION_MAJOR ${GNUITAR_VERSION_MAJOR})
SET (CPACK_PACKAGE_VERSION_MINOR ${GNUITAR_VERSION_MINOR})
SET (CPACK_PACKAGE_VERSION_PATCH ${GNUITAR_VERSION_PATCH})
SET (CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/COPYING")
SET (CPACK_PACKAGE_CONTACT "taylorcholberton@gmail.com")
INCLUDE (CPack)

