CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET (CMAKE_CXX_STANDARD 11)
SET (CMAKE_CXX_STANDARD_REQUIRED ON)
SET (CMAKE_CXX_EXTENSIONS OFF)

INCLUDE_DIRECTORIES ("..")

IF (MSVC)
    SET (CMAKE_CXX_FLAGS "/Wall")
ELSE (MSVC)
    SET (CMAKE_CXX_FLAGS "-Wall -Wextra -Werror -Wfatal-errors")
ENDIF (MSVC)

ADD_EXECUTABLE(gnuitar-sh
    gnuitar-sh.cc
    shell.h
    shell.cc)

TARGET_LINK_LIBRARIES(gnuitar-sh gnuitar)

INSTALL(TARGETS gnuitar-sh
    RUNTIME DESTINATION bin
    ARCHIVE DESTINATION lib
    LIBRARY DESTINATION lib)

